samples/_failures_safe/1761535414_d26c4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25866fc6.c: In function ‘main’:
./samples/SAFE/__tmp_25866fc6.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_25866fc6.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25866fc6.c:152:17: error: expected declaration or statement at end of input
